<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selector_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="6dp">

        <TextView
            android:id="@+id/selector_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selector_title"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/selector_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selector_subtitle"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:paddingBottom="14dp" />

    <LinearLayout
        android:id="@+id/selector_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/loading"
            android:autoSizeTextType="uniform"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/selector_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:clipToPadding="false"
        android:paddingTop="2dp"
        android:paddingBottom="6dp" >
    </ListView>

    <TextView
        android:id="@+id/selector_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/selector_empty_not_installed"
        android:textColor="?android:attr/textColorSecondary"
        android:visibility="gone" />

</LinearLayout>

